--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
 
   <title>Animp3 - No Music No Life!</title>
 
@@ -181,8 +183,8 @@
                 </button>
               </form>
 
-              <a class="navbar-brand" href="./index.html"><img class="rounded-circle"
-                  src="./assets/img/logo/default" alt="logo" width="50px" height="50px"></a>
+              <a class="navbar-brand" href="./index.html"><img class="rounded-circle" src="./assets/img/logo/default"
+                  alt="logo" width="50px" height="50px"></a>
             </div>
           </div>
         </nav>
@@ -193,55 +195,59 @@
     <div class="container">
       <div class="py-3 pt-md-5 pb-md-4 mx-auto">
 
-        <!-- Carousel Page -->
-        <div class="carousel-pages">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="./assets/img/slide/1556872502929_org.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100"
-                  src="https://avatar-nct.nixcdn.com/slideshow/2019/04/25/5/8/1/7/1556179054405_org.jpg"
-                  alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100"
-                  src="https://avatar-nct.nixcdn.com/slideshow/2019/05/06/9/3/1/e/1557111077442_org.jpg"
-                  alt="Third slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/img/slide/1556274283240_org.jpg" alt="Four slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100"
-                  src="https://avatar-nct.nixcdn.com/slideshow/2019/04/26/8/1/b/d/1556272026695_org.jpg"
-                  alt="Five slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
+
 
         <!-- BigMain Page -->
         <div class="row justify-content-start">
 
           <!-- Left Page -->
           <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
+            <!-- Carousel Page! -->
+            <div class="carousel-pages">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100"
+                      src="./assets/img/slide/1556872502929_org.jpg" 
+                      alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100"
+                      src="https://avatar-nct.nixcdn.com/slideshow/2019/04/25/5/8/1/7/1556179054405_org.jpg"
+                      alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100"
+                      src="https://avatar-nct.nixcdn.com/slideshow/2019/05/06/9/3/1/e/1557111077442_org.jpg"
+                      alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/slide/1556274283240_org.jpg" alt="Four slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100"
+                      src="https://avatar-nct.nixcdn.com/slideshow/2019/04/26/8/1/b/d/1556272026695_org.jpg"
+                      alt="Five slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+            <!-- Close Carousel Page! -->
 
             <!-- Nghe Gi Hom Nay! -->
             <div class="what-to-hear-today-container">
@@ -251,7 +257,7 @@
               </a>
               <!-- Component Nghe Gi Hom Nay! -->
               <div class="row justify-content-start">
-                <div class="col col-lg-2 mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 mr-4">
                   <div class="album-square ai-phi">
                     <div class="overlay">
                       <div class="icon">
@@ -268,7 +274,7 @@
                   <small class="text-muted">Hậu Huyền</small>
                 </div>
 
-                <div class="col col-lg-2 mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 mr-4">
                   <div class="album-square dut-con-mua-nay">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -285,7 +291,7 @@
                   <small class="text-muted">Hậu Huyền</small>
                 </div>
 
-                <div class="col col-lg-2 mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 mr-4">
                   <div class="album-square on-rainy-days">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -302,7 +308,7 @@
                   <small class="text-muted">Beast</small>
                 </div>
 
-                <div class="col col-lg-2 mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 mr-4">
                   <div class="album-square sick-enough-to-die">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -319,7 +325,7 @@
                   <small class="text-muted">MC-Mong feat.Mellow</small>
                 </div>
 
-                <div class="col col-lg-2 d-md-none d-lg-block mr-4 ">
+                <div class="col-4 col-sm-3 col-lg-2 d-md-none d-lg-block mr-4">
                   <div class="album-square ly-nhan-sau">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -336,7 +342,7 @@
                   <small class="text-muted">Lý Viên Kiệt</small>
                 </div>
 
-                <div class="col col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
                   <div class="album-square bac-phan">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -353,7 +359,7 @@
                   <small class="text-muted">Jack, K-ICM</small>
                 </div>
 
-                <div class="col col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
                   <div class="album-square hong-nhan">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -370,7 +376,7 @@
                   <small class="text-muted">Jack</small>
                 </div>
 
-                <div class="col col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
                   <div class="album-square fiction">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -387,7 +393,7 @@
                   <small class="text-muted">Beast</small>
                 </div>
 
-                <div class="col col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
                   <div class="album-square love-is-a-beautiful-pain">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -404,7 +410,7 @@
                   <small class="text-muted">Endless Tears feat. 中村舞子</small>
                 </div>
 
-                <div class="col col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
+                <div class="col-4 col-sm-3 col-lg-2 d-xl-none d-lg-block d-md-none mr-4">
                   <div class="album-square take-me-hand">
                     <div class="overlay">
                       <div class="icon" style="color: white;">
@@ -505,7 +511,7 @@
               <!-- Mini Component MV-Hot -->
               <!-- Row-1 -->
               <div class="row justify-content-start mt-4">
-                <div class="col col-lg-2 mr-auto">
+                <div class="col-5 col-md-4 col-lg-2 mr-auto">
                   <div class="mv-hot-mini dau-co-ra-sao">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -529,7 +535,7 @@
                   <small class="text-muted">Trần Đăng Quang</small>
                 </div>
 
-                <div class="col col-lg-2 mr-auto">
+                <div class="col-5 col-md-4 col-lg-2 mr-auto">
                   <div class="mv-hot-mini bacphan-jack">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -553,7 +559,7 @@
                   <small class="text-muted">Jack, K-ICM</small>
                 </div>
 
-                <div class="col col-lg-2 mr-auto">
+                <div class="col-5 col-md-4 col-lg-2 mr-auto">
                   <div class="mv-hot-mini xuat-son">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -577,7 +583,7 @@
                   <small class="text-muted">Hoa Chúc</small>
                 </div>
 
-                <div class="col col-lg-2 mr-auto">
+                <div class="col-5 col-md-4 col-lg-2 mr-auto">
                   <div class="mv-hot-mini ai-phi-mv">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -605,7 +611,7 @@
 
               <!-- Row-2 -->
               <div class="row justify-content-start mt-4">
-                <div class="col col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div class="mv-hot-mini dung-yeu-nua-met-rui">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -629,7 +635,7 @@
                   <small class="text-muted">Min</small>
                 </div>
 
-                <div class="col col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div class="mv-hot-mini anh-phai-lam-sao">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -653,7 +659,7 @@
                   <small class="text-muted">ChuBin</small>
                 </div>
 
-                <div class="col col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div class="mv-hot-mini ly-nhan-sau-mv">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -677,7 +683,7 @@
                   <small class="text-muted">Lý Viên Kiệt</small>
                 </div>
 
-                <div class="col col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                   <div class="mv-hot-mini gap-nguoi-dung-luc-mv">
                     <div class="play-button">
                       <img src="./assets/img/playbutton/icon-48x48-play.png" alt="play">
@@ -1544,6 +1550,31 @@
 
           <!-- Right Page -->
           <div class="col-6 col-md-4 d-none d-sm-none d-md-none d-lg-none d-xl-block">
+            <!-- Carousel -->
+            <div class="bd-example">
+              <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators edit-carousel">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./assets/img/slider/New Project.png"
+                      class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/img/slider/New Project (1).png"
+                      class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/img/slider/New Project (2).png"
+                      class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Close Carousel! -->
 
             <!-- Chu De Hot! -->
             <div class="topic-hot-container">
@@ -2154,7 +2185,7 @@
     </div>
 
   </div>
-  
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -2165,10 +2196,13 @@
   </script>
   <script src="./bootstrap-4.3.1/js/bootstrap.js">
   </script>
+
   <!-- Insert Ionicons -->
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+
   <!-- Bot Chat -->
-  <script src="https://embed.small.chat/TJ7D2AZUYGJ13BRJ65.js" async></script>   
+  <script src="https://embed.small.chat/TJ7D2AZUYGJ13BRJ65.js" async></script>
+
 </body>
 
 </html>
