--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="yandex-verification" content="09818a233bd4e218" />
 
 
   <title>Animp3 - No Music No Life!</title>
